feat: add DeleteSubscription endpoint
